# NTFS-Reader-CLI

./: Cargo.toml  README.md
src/: journal.rs  main.rs  mft.rs
