[package]
name = "ntfs-reader-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed-Amine Benali <benali.medamine2002@gmail.com>"]
description = "Command-line wrapper for ntfs-reader library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/medamine980/NTFS-Reader-CLI"

[[bin]]
name = "ntfs-reader-cli"
path = "src/main.rs"

[dependencies]
ntfs-reader = "0.4.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
time = { version = "0.3", features = ["formatting"] }
